--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@near-wallet-selector/core": "^7.1.0",
+    "@near-wallet-selector/ledger": "^7.1.0",
+    "@near-wallet-selector/modal-ui": "^7.1.0",
+    "@near-wallet-selector/my-near-wallet": "^7.1.0",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.56",
@@ -34,8 +39,10 @@
     "jsdom": "^20.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "near-api-js": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "process": "^0.11.10",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
