--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@near-wallet-selector/ledger": "^7.1.0",
     "@near-wallet-selector/modal-ui": "^7.1.0",
     "@near-wallet-selector/my-near-wallet": "^7.1.0",
+    "@near-wallet-selector/near-wallet": "^7.1.0",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.56",
