--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+src/config.ts
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
