--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.56",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -46,6 +47,7 @@
     "process": "^0.11.10",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
+    "uuid": "^9.0.0",
     "vite": "^3.0.9",
     "vitest": "^0.23.0",
     "vue-tsc": "^0.40.7"
