--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.5.3",
     "buffer": "^6.0.3",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
