--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@vuepic/vue-datepicker": "^3.5.3",
     "buffer": "^6.0.3",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@johmun/vue-tags-input": "^2.1.0",
     "@near-wallet-selector/core": "^7.1.0",
     "@near-wallet-selector/ledger": "^7.1.0",
     "@near-wallet-selector/modal-ui": "^7.1.0",
     "@near-wallet-selector/my-near-wallet": "^7.1.0",
     "@near-wallet-selector/near-wallet": "^7.1.0",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/": "johmun/vue-tags-input",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.56",
     "@types/uuid": "^8.3.4",
@@ -34,6 +35,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "@vuepic/vue-datepicker": "^3.5.3",
     "axios": "^0.27.2",
     "cypress": "^10.7.0",
     "eslint": "^8.22.0",
